--- a/visual_first.html
+++ b/visual_first.html
@@ -24,6 +24,16 @@
     </head>
     <body></body>
     <script>
+        
+var subject_id= jsPsych.data.getURLVariable('PROLIFIC_PID');
+var study_id= jsPsych.data.getURLVariable('STUDY_ID');
+var session_id= jsPsych.data.getURLVariable('SESSION_ID');
+
+jsPsych.data.addProperties({
+  subject_id:subject_id,
+  study_id:study_id,
+  session_id:session_id
+});
 
 var timeline= []
 
@@ -35,15 +45,16 @@ timeline.push(preloadImg)
 
 var preloadVid= {
   type: 'preload',
-  video: ['video/AuditoryMaVisualTa.mp4','video/AuditoryBaVisualTa.mp4','video/AuditoryBaVisualKa.mp4','video/AuditoryPaVisualDa.mp4','video/AuditoryNaVisualDa.mp4','video/AuditoryPaVisualTa.mp4','video/AuditoryGaVisualTa.mp4','video/AuditoryTaVisualMa.mp4']
+  video: ['video/AuditoryBaVisualBa.mp4','video/AuditoryMaVisualTa.mp4','video/AuditoryBaVisualTa.mp4','video/AuditoryBaVisualKa.mp4','video/AuditoryPaVisualDa.mp4','video/AuditoryNaVisualDa.mp4','video/AuditoryPaVisualTa.mp4','video/AuditoryGaVisualTa.mp4','video/AuditoryTaVisualMa.mp4'],
+  message: 'Welcome to our experiment! Please wait a few moments while the video files load.'
 };
 timeline.push(preloadVid)
 
     var welcome = {
       type: 'html-keyboard-response',
-      stimulus: "Welcome to the experiment. Press any key to begin."
+      stimulus: "Thank you for your participation. Press any key to begin."
     };
-    timeline.push(welcome)
+timeline.push(welcome)
 
     var browser = {
             type: 'instructions',
@@ -62,7 +73,16 @@ var distance_ref = {
                     "attention to the center of your screen.</p>" +
                     "<p> Once you have done so, press any key to continue.</p>",
         };
-timeline.push(distance_ref)     
+timeline.push(distance_ref)    
+        
+var chinrest = {
+    type: "virtual-chinrest",
+    stimulus: "img/card.png",
+    blindspot_reps: 3,
+    resize_units: "none",
+    pixels_per_unit: 50,
+        };
+timeline.push(chinrest)
 
     var cameraWarning = {
             type: 'instructions',
@@ -92,15 +112,6 @@ var cameraInit = {
             <p>Reminder: the <b>ONLY</b> webcam data collected is the point on the screen you are looking at. No images or recordings will ever leave your computer.</p>`
         };
 timeline.push(cameraInit)
-
-var chinrest = {
-            type: "virtual-chinrest",
-            stimulus: "img/card.png",
-            blindspot_reps: 3,
-            resize_units: "none",
-            pixels_per_unit: 50,
-        };
-timeline.push(chinrest)
 
 var survey = {
             type: "survey-text",
@@ -436,7 +447,7 @@ timeline.push(mcGurkEnd);
 
     var calibration_instructions = {
                     type: 'html-keyboard-response',
-                    stimulus: `<p>The following event will calibrate our eyetracking. Please focus on dots as they appear, and then left-click each one with your mouse.</p>`
+                    stimulus: `<p>The following event will calibrate our eyetracking. Please focus on dots as they appear, and then left-click each one with your mouse. Press any key to begin.</p>`
                 };
     timeline.push(calibration_instructions);
 
@@ -468,7 +479,9 @@ timeline.push(mcGurkEnd);
 
     var conclusion = {
         type: 'html-keyboard-response',
-        stimulus: 'This concludes the experiment. Thank you for participating.'
+        stimulus: `<p>This concludes the experiment. Thank you for participating.</p>
+        <p><a href="https://app.prolific.co/submissions/complete?cc=46AD0359">Click here to return to Prolific and complete the study</a>.</p>`,
+        choices: "NO_KEYS"
     };
     timeline.push (conclusion);
 
