--- a/visual_first.html
+++ b/visual_first.html
@@ -350,6 +350,8 @@ var trialInstructions = {
 };
 timeline.push(trialInstructions);
 
+//Although trials are labeled McGurk and Incongruent, each trial contains both McGurk and incongruent stimuli randomly interleaved throughout//
+        
     var mcGurktrial = {
         timeline: [
         {type: 'video-button-response',
